objects/SBQQ__FieldSetMetadata__c.object
<CustomObject>
    <description>FieldSet Metadata for Column metadata sizing.</description>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the user does not have a configuration.</description>
        <inlineHelpText>If the user does not have a configuration.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__FieldSetValidation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldSet Validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__FieldSet__c</fullName>
        <description>The FieldSet being used for column metadata sizing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldSet Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ObjectType__c</fullName>
        <description>The Object Type being referred to when using column metadata sizing.</description>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                    <default>true</default>
                    <label>Quote Line</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FieldSet Metadata</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>FieldSet Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldSets Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>